# tfdo

./: .groups.yaml  CHANGELOG.md  justfile  mkdocs.yml  pyproject.toml  tfdo.api.yaml
.changelog/: 000.yaml  001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  008.yaml
.github/actions/setup/: action.yml
.github/workflows/: ci.yaml  docs.yaml  path_sync_validate.yaml  post-merge.yaml  release.yaml
docs/: index.md
docs/_root/: index.md  tfdosettings.md
docs/core/: index.md
docs/inspect/: index.md
docs/schema/: index.md
tfdo/: __init__.py  __main__.py  cli.py  cli_test.py  core.py  inspect.py  schema.py
tfdo/_internal/: cmd_options.py  json_output.py  models.py  settings.py  typer_app.py
tfdo/_internal/check/: check_logic_test.py  cmd_check.py
tfdo/_internal/core/: binary.py  binary_test.py  check_logic.py  check_logic_test.py  cmd_apply.py  cmd_check.py  cmd_destroy.py  cmd_info.py  cmd_init.py  cmd_plan.py  cmd_smoke_test.py  executor.py  executor_test.py  tf_files.py
tfdo/_internal/inspect/: __init__.py  api_coverage_logic.py  api_coverage_logic_test.py  cmd_inspect.py  cmd_inspect_test.py  description_search_logic.py  description_search_logic_test.py  hcl_resource_paths.py  hcl_resource_paths_test.py  hcl_schema_paths.py  hcl_schema_paths_test.py  inspect_paths_logic.py  inspect_paths_logic_test.py  name_normalize.py  name_normalize_test.py  resource_usage_logic.py  resource_usage_logic_test.py  schema_input_classify_logic.py  schema_input_classify_logic_test.py
tfdo/_internal/inspect/hcl_resource_paths_test/: test_collect_regression_ok.txt  test_collect_regression_parse_error.txt
tfdo/_internal/inspect/hcl_schema_paths_test/: mongodbatlas_advanced_cluster.tf  mongodbatlas_advanced_cluster_schema.json
tfdo/_internal/schema/: cache.py  cache_test.py  cmd_schema.py  cmd_schema_test.py  diff.py  diff_test.py  inspect.py  inspect_logic.py  inspect_logic_test.py  inspect_test.py  models.py  resource_input_paths.py  resource_input_paths_test.py  terraform_cli_config.py  terraform_cli_config_test.py
tfdo/_internal/schema/inspect_logic_test/: minimal_schema.json
tfdo/_internal/schema/resource_input_paths_test/: mongodbatlas_project_resource_schema.json
